kubernetes/cluster/active/apps/cyberchef/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cyberchef
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Recipe manager and meal planner.
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: cyberchef.svg
    gethomepage.dev/name: CyberChef
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=cyberchef"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: envoy-gateway-ingress
  hostnames:
    - "cyberchef.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: cyberchef
          namespace: cyberchef
          port: 10219
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
