kubernetes/cluster/active/apps/cyberchef/overlays/prod/resources/authz-custom.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: cyberchef-authservice
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: CUSTOM
  provider:
    name: authservice-grpc
  rules:
    - to:
        - operation:
            hosts:
              - cyberchef.${FQDN_01}
